novas funções adicionadas, pronto para testes/deploy

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <ul>
         <li><a href="">Adicionar Ferramentas</a></li>
         <li><a href="found/foundFerraments.html">Buscar Ferramentas</a></li>
+        <li><a href="auth/auth.html">Login e cadastro</a></li>
+        <li><a href="auth/auth.html">Dashboard</a></li>
     </ul>
 
 
