--- a/500.html
+++ b/500.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>500 - Erro Interno do Servidor</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    
+    <!-- Favicon -->
+    <link rel="icon" href="https://placehold.co/32x32/0d9488/ffffff?text=GT" type="image/png">
+
+    <!-- Font Awesome para ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    
+    <!-- Metadados para SEO e Compartilhamento -->
+    <meta name="description" content="Guia Interativo de Ferramentas: Encontre, conheça e compare ferramentas tecnológicas para desenvolvedores e profissionais de TI.">
+    <meta name="keywords" content="ferramentas, tecnologia, desenvolvimento, programação, web, software, guia, produtividade, full-stack">
+    <meta name="author" content="Adolfo Figueiredo">
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:title" content="Guia Interativo de Ferramentas">
+    <meta property="og:description" content="Encontre, conheça e compare ferramentas tecnológicas para desenvolvedores e profissionais de TI.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://adolfofigueiredo.github.io/MyFerrament-list-to-do/">
+    <meta property="og:image" content="https://placehold.co/1200x630/0d9488/ffffff?text=Guia+de+Ferramentas">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -47,5 +66,27 @@
         <p class="text-md text-slate-500">Por favor, tente novamente mais tarde. Se o problema persistir, entre em contato com o suporte.</p>
         <a href="index.html" class="btn-primary">Voltar para a Página Inicial</a>
     </div>
+
+
+    <!-- Footer -->
+    <footer class="bg-slate-800 text-white text-center py-8 mt-12">
+        <div class="max-w-4xl mx-auto px-4">
+            <p>&copy; 2025 Guia de Ferramentas. Desenvolvido por <span class="font-semibold">Adolfo Figueiredo</span>.</p>
+            <div class="flex justify-center space-x-6 mt-4">
+                <a href="https://github.com/AdolfoFigueiredo" target="_blank" rel="noopener noreferrer" class="text-white hover:text-teal-400 transition-colors">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/caleb-figueiredo-95946a31a/o" target="_blank" rel="noopener noreferrer" class="text-white hover:text-teal-400 transition-colors">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+                <a href="https://www.instagram.com/caleb_figueiredo28/" target="_blank" rel="noopener noreferrer" class="text-white hover:text-teal-400 transition-colors">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </body>
 </html>
